Use virtual threads and make packet sending async